; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty_subr.c_catq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty_subr.c_catq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clist = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @catq(%struct.clist* %0, %struct.clist* %1) #0 {
  %3 = alloca %struct.clist*, align 8
  %4 = alloca %struct.clist*, align 8
  %5 = alloca i32, align 4
  store %struct.clist* %0, %struct.clist** %3, align 8
  store %struct.clist* %1, %struct.clist** %4, align 8
  br label %6

6:                                                ; preds = %10, %2
  %7 = load %struct.clist*, %struct.clist** %3, align 8
  %8 = call i32 @getc(%struct.clist* %7)
  store i32 %8, i32* %5, align 4
  %9 = icmp ne i32 %8, -1
  br i1 %9, label %10, label %14

10:                                               ; preds = %6
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.clist*, %struct.clist** %4, align 8
  %13 = call i32 @putc(i32 %11, %struct.clist* %12)
  br label %6

14:                                               ; preds = %6
  ret void
}

declare dso_local i32 @getc(%struct.clist*) #1

declare dso_local i32 @putc(i32, %struct.clist*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
